# Cover_Maestro_2

./: AGENTS.md  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 025362f4dd85_add_zones_6_to_9.py  07b4b191c0db_initial_schema.py  0a9b8c7d6e5f_add_ebay_image_patterns_to_export_settings.py  0b531c4badf9_merge_marketplace_orders_migration.py  0c5758488c82_create_reverb_equipment_type_field_.py  0e27b963e908_add_yards_purchased_to_supplier_.py  0edb99622d44_merge_heads.py  12345abcde67_add_export_config.py  16b73c2009b1_add_external_line_item_id_to_.py  16f3c97d56fe_add_price_cents_to_design_options.py  1b01423ff433_add_shipping_version_to_snapshot.py  3cca839436f5_add_sku_override_to_models.py  3e3f85a21bca_phase_4_shipping_and_pricing_tables.py  47774ccbacb8_add_parent_sku_to_models.py  4ffe8a80d14e_add_active_to_shipping_rate_tiers.py  500380e2dd6c_add_shipping_zones.py  57b252b8811c_add_placeholder_token_to_design_options.py  59987d5abc2b_add_is_pricing_relevant_to_design_.py  999c3d75543c_add_model_pricing_history.py  (+70 more)
app/: __init__.py  auth.py  config.py  database.py  main.py  seed_data.py  seed_data_pricing.py
client/: build_log.txt  index.html  package-lock.json  package.json
scripts/: add_surface_area_col_raw.py  add_surface_area_column.py  backfill_colors_from_material_colour_surcharges.py  debug_import.py  delete_pricing_for_model.py  finalize_active_ebay_template.py  seed_pricing_history_demo.py  seed_shipping.py  smoke_customization_template.py  smoke_product_type_template.py  verify_phase7.py  verify_phase8.py  verify_phase9.py
(+86 files in other folders)
