[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.124.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyjwt[crypto]>=2.10.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.21",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
    "pydantic-settings (>=2.12.0,<3.0.0)",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
